deployment-service-ingress/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: dev-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: 142081895333.dkr.ecr.eu-central-1.amazonaws.com/authentication_service
        ports:
        - containerPort: 4001
      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: dev-environment
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
