deployment-service-ingress/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis1
  namespace: dev-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis1
  template:
    metadata:
      labels:
        app: redis1
    spec:
      containers:
      - name: redis1
        image: redis:latest
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis1
  namespace: dev-environment
spec:
  selector:
    app: redis1
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
