deployment-service-ingress/api-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  namespace: dev-environment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
      - name: api-gateway-service
        image: 142081895333.dkr.ecr.eu-central-1.amazonaws.com/api_gateway_service:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: dev-environment
spec:
  selector:
    app: api-gateway-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: dev-environment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dev-rancher.heronos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 80
